@@ -21,7 +21,6 @@
 #include "pace/config/compiler.h"
 #include "pace/config/constants.h"
 #include "pace/config/defaults.h"
-#include "pace/config/types.h"
 #include "pace/config/utility.h"
 #include "pace/config/features.h"
 
