@@ -1,40 +1,0 @@
-/* $Id$
-
- * ============================================================================
- *
- * = LIBRARY
- *    pace
- *
- * = FILENAME
- *    config/types.h
- *
- * = AUTHOR
- *    Luther Baker
- *
- * ============================================================================ */
-
-
-#ifndef PACE_CONFIG_TYPES_H
-#define PACE_CONFIG_TYPES_H
-
-
-#define pace_dev_t dev_t
-#define pace_gid_t gid_t
-#define pace_ino_t ino_t
-#define pace_mode_t mode_t
-#define pace_nlink_t nlink_t
-#define pace_off_t off_t
-#define pace_pid_t pid_t
-#define pace_pthread_t pthread_t
-#define pace_pthread_attr_t pthread_attr_t
-#define pace_pthread_mutex_t pthread_mutex_t
-#define pace_pthread_mutexattr_t pthread_mutexattr_t
-#define pace_pthread_cond_t pthread_cond_t
-#define pace_pthread_condattr_t pthread_condattr_t
-#define pace_pthread_key_t pthread_key_t
-#define pace_pthread_once_t pthread_once_t
-#define pace_ssize_t ssize_t
-#define pace_uid_t uid_t
-
-
-#endif /* PACE_CONFIG_TYPES_H */
